Bug 15: Abstracting all "chrome." calls into "Platform." calls. This is the first step in porting Tab Organizer to other browsers.
Bug 5: Also started work on a bar that shows up, asking if the user
wants to undo an action.

Bug 16: Lastly, changed some stuff in the Options API. I'm hoping this
will fix the issue, but I'll need to do some testing first to verify.

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     ],
     "content_scripts": [{
         "matches": [ "http://*/*", "https://*/*", "ftp://*/*" ],
-        "js": [ "lib/Keyboard.js" ],
+        "js": [ "lib/Platform.js", "lib/Keyboard.js" ],
         "run_at": "document_end",
         "all_frames": true
     }]
