Changing it to use chrome://favicon/

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
         "default_title": "Tab Organizer"
     },
     "permissions": [
+        "chrome://favicon/",
         "tabs"
     ],
     "content_scripts": [{
