--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
     "permissions": [
         "chrome://favicon/",
         "bookmarks",
+        "history",
         "tabs",
         "idle"
     ],
