--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "Tab Organizer",
     "version": "3.8",
     "description": "Manager for quickly finding and organizing all your tabs.",
+    "default_locale": "en",
     "icons": {
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
